--- a/src/WPF.Material/Theming/XAML/Container.xaml
+++ b/src/WPF.Material/Theming/XAML/Container.xaml
@@ -68,6 +68,7 @@
                 <ControlTemplate TargetType="{x:Type controls:Container}">
                     <controls:OverlapPanel x:Name="Root">
                         <controls:Ripple
+                            x:Name="Ripple"
                             CanvaClip="{Binding ElementName=Surface, Path=RenderedGeometry}"
                             ClipToBounds="{TemplateBinding ClipToBounds}"
                             Foreground="{TemplateBinding Foreground}">
