--- a/src/WPF.Material/Theming/XAML/Ripple.xaml
+++ b/src/WPF.Material/Theming/XAML/Ripple.xaml
@@ -22,10 +22,19 @@
                             ContentTemplate="{TemplateBinding ContentTemplate}"
                             ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
 
-                        <Canvas Clip="{TemplateBinding CanvaClip}" IsHitTestVisible="False">
+                        <Canvas
+                            x:Name="Canvas"
+                            Clip="{TemplateBinding CanvaClip}"
+                            IsHitTestVisible="False">
                             <Ellipse x:Name="PART_Ellipse" Fill="{TemplateBinding Foreground}" />
                         </Canvas>
                     </controls:OverlapPanel>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsUnbounded" Value="True">
+                            <Setter TargetName="Canvas" Property="Clip" Value="{x:Null}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
